@@ -36,7 +36,7 @@ class TestOverview(FunctionalTestCase):
                    u'Mehrere Anhaenge.eml \u2014 32 KB '
                    u'Checkout and edit Download copy Attach to email'],
                   ['Attachments',
-                   'Inneres Testma?il ohne Attachments.eml 1 KB '
+                   u'Inneres Testma\u0308il ohne Attachments.eml 1 KB '
                    'word_document.docx 22.4 KB '
                    'Text.txt 1 KB '
                    'Save attachments'],
